# cmdfu

./: .gitignore  CMakeLists.txt  development.md  lwftp.c  lwftp.h  main.c  mdfu.c  mdfu.h  readme.md  serial_transport.c  serial_transport.h  socket_mac.c  socket_mac.h  transport.c  version.h.in
apps/: CMakeLists.txt  main.c
apps/cmdfu/: CMakeLists.txt  cli_parser.c  cmdfu.h  main.c  version.h.in
apps/transport_example/: CMakeLists.txt  test_examples.c
cicd/: Jenkinsfile  cloudprovider.yaml
citd/: Jenkinsfile  cloudprovider.yaml
include/mdfu/: checksum.h  error.h  image_reader.h  image_writer.h  logging.h  mac.h  mdfu.h  serial_transport.h  socket_mac.h  timeout.h  tools.h  transport.h
include/mdfu/mac/: i2cdev_mac.h  mac.h  serial_mac.h  socket_mac.h  spidev_mac.h
include/mdfu/tools/: i2cdev.h  network.h  serial.h  spidev.h  tools.h
include/mdfu/transport/: i2c_transport.h  serial_transport.h  spi_transport.h  transport.h
src/: CMakeLists.txt  serial_transport copy.c
src/mac/: CMakeLists.txt  i2c_mac.c  i2cdev_mac.c  serial_mac.c  serial_mac_win.c  socket_mac.c  socket_packet_mac.c  spidev_mac.c
src/mdfu/: CMakeLists.txt  mdfu.c  mdfu_config.h.in
src/tools/: CMakeLists.txt  i2cdev_tool.c  network_tool.c  serial_tool.c  spidev_tool.c  tools.c
src/transport/: CMakeLists.txt  i2c_transport.c  serial_transport.c  serial_transport_buffered.c  spi_transport.c  transport.c
src/utils/: CMakeLists.txt  checksum.c  image_reader.c  image_writer.c  logging.c  timeout.c
test/: project.yml
test/test/: mac_functions.h  test_mdfu_client_info.c  test_mdfu_packet.c  test_packet_mac.c  test_serial_transport_layer.c
